# Python_Assignments

./: README.md  pyproject.toml
assignments/: assignment8.py
